--- a/templates/try.html
+++ b/templates/try.html
@@ -79,7 +79,7 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <img src="{{ url_for('static', filename="DSC_0277.jpg")}}"alt="Author" style="width:40%" class="w3-circle w3-hover-opacity">
+  <img src="{{ url_for('static', filename="zoom.jpg")}}"alt="Author" style="width:40%" class="w3-circle w3-hover-opacity">
   <h3>Alice Giampino</h3>
   <p>Statitician & Data Scientist</p>
 </div>
