--- a/templates/try.html
+++ b/templates/try.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='assets/css/screen.css')}}">
 	<script src="{{ url_for('static',filename='assets/js/alone/jquery-1.10.2.min.js')}}" type="text/javascript"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-	<link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-0.13.0.min.css" type="text/css" />
+	<link rel="stylesheet" href="://cdn.pydata.org/bokeh/release/bokeh-0.13.0.min.css" type="text/css" />
 	<script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-0.13.0.min.js"></script>
                        {{ script | safe }}
 </head>
